--- a/templates/etc/gitlab-runner/config.toml.j2
+++ b/templates/etc/gitlab-runner/config.toml.j2
@@ -7,19 +7,22 @@ check_interval = {{ gitlab_runner_check_interval }}
   session_timeout = 1800
 
 [[runners]]
-  executor = "custom"
-  name = "{{ gitlab_runner_runners_name }}"
-  url = "{{ gitlab_runner_runners_url }}"
-  token = "{{ gitlab_runner_runners_token }}"
   builds_dir = "{{ gitlab_runner_runners_builds_dir }}"
   cache_dir = "{{ gitlab_runner_runners_cache_dir }}"
-  [runners.custom_build_dir]
-  [runners.cache]
-    [runners.cache.s3]
-    [runners.cache.gcs]
-    [runners.cache.azure]
-  [runners.custom]
-    config_exec = "{{ gitlab_runner_runners_custom_config_exec }}"
-    prepare_exec = "{{ gitlab_runner_runners_custom_prepare_exec }}"
-    run_exec = "{{ gitlab_runner_runners_custom_run_exec }}"
-    cleanup_exec = "{{ gitlab_runner_runners_custom_cleanup_exec }}"
+  executor = "docker"
+  name = "{{ gitlab_runner_runners_name }}"
+  token = "{{ gitlab_runner_runners_token }}"
+  url = "{{ gitlab_runner_runners_url }}"
+  [runners.docker]
+    cpus = "{{ gitlab_runner_runners_docker_cpus }}"
+    devices = ["{{ gitlab_runner_runners_docker_devices | join('","') }}"]
+    disable_cache = false
+    disable_entrypoint_overwrite = false
+    image = "{{ gitlab_runner_runners_docker_image }}"
+    memory = "{{ gitlab_runner_runners_docker_memory }}"
+    memory_swap = "{{ gitlab_runner_runners_docker_memory_swap }}"
+    oom_kill_disable = false
+    privileged = {{ gitlab_runner_runners_docker_privileged | bool | lower }}
+    shm_size = 0
+    tls_verify = false
+    volumes = ["{{ gitlab_runner_runners_docker_volumes | join('","') }}"]
