--- a/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
@@ -1,4 +1,4 @@
----
+#!/bin/bash
 
 # (c) Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
@@ -14,26 +14,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- hosts: all
-  remote_user: root
-  become: true
-  tasks:
-    - include_role:
-        name: python
-      tags: python
+set -ex
 
-    - include_role:
-        name: git
-      tags: git
-
-    - include_role:
-        name: vagrant
-      tags: vagrant
-
-    - include_role:
-        name: libvirt
-      tags: libvirt
-
-    - include_role:
-        name: gitlab_runner
-      tags: gitlab_runner
+vagrant destroy --force
