vagrant ssh -- /bin/bash < "${1}"

--- a/templates/opt/gitlab-runner/executors/vagrant/run.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/run.sh.j2
@@ -16,7 +16,7 @@
 
 set -ex
 
-ssh -F ssh_config -o ServerAliveInterval=300 default /bin/bash < "${1}"
+vagrant ssh -- /bin/bash < "${1}"
 
 if [ $? -ne 0 ]; then
     exit $BUILD_FAILURE_EXIT_CODE
