--- a/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+# {{ ansible_managed }}
+
 # (c) Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
