--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -33,11 +33,13 @@ Vagrant.configure("2") do |config|
     libvirt.cpu_mode = 'host-model'
     libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
     libvirt.disk_bus = 'virtio'
+    libvirt.driver = 'kvm'
     libvirt.management_network_address = '{{ gitlab_runner_runners_vagrant_management_network_address }}'
     libvirt.management_network_name = '{{ gitlab_runner_runners_vagrant_management_network_name }}'
     libvirt.memory = {{ gitlab_runner_runners_vagrant_memory }}
     libvirt.nested = {{ gitlab_runner_runners_vagrant_nested | bool | lower }}
     libvirt.nic_model_type = 'virtio'
+    libvirt.storage :file, bus: 'virtio', cache: 'none'
     libvirt.video_type = 'virtio'
     libvirt.volume_cache = 'none'
   end
