echo ${CI_PIPELINE_URL} > CI_PIPELINE_URL

--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -21,6 +21,9 @@ set -ex
 VM_HOSTNAME="${VM_HOSTNAME:-"runner-${CUSTOM_ENV_CI_RUNNER_ID}-project-${CUSTOM_ENV_CI_PROJECT_ID}-concurrent-${CUSTOM_ENV_CI_CONCURRENT_PROJECT_ID}"}"
 echo ${VM_HOSTNAME} > VM_HOSTNAME
 
+CI_PIPELINE_URL="${CI_PIPELINE_URL:-"${CUSTOM_ENV_CI_PIPELINE_URL}"}"
+echo ${CI_PIPELINE_URL} > CI_PIPELINE_URL
+
 CI_JOB_URL="${CI_JOB_URL:-"${CUSTOM_ENV_CI_JOB_URL}"}"
 echo ${CI_JOB_URL} > CI_JOB_URL
 
