--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -52,11 +52,11 @@ Vagrant.configure("2") do |config|
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
     mkdir -p {{ gitlab_runner_runners_builds_dir }}
-    chown -Rf vagrant:vagrant {{ gitlab_runner_runners_builds_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }}
     mkdir -p {{ gitlab_runner_runners_cache_dir }}
-    chown -Rf vagrant:vagrant {{ gitlab_runner_runners_cache_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }}
     mkdir -p {{ gitlab_runner_runners_vagrant_boxes_dir }}
-    chown -Rf vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }}
     exit 0
   SHELL
 
@@ -76,5 +76,4 @@ chmod 0700 .ssh
 chmod 0600 .ssh/*
 
 cp -rfT /etc/skel .
-
 chown -Rf vagrant:vagrant .
