--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -48,15 +48,16 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
+    set -ex
     apt-get update
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
     mkdir -p {{ gitlab_runner_runners_builds_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }} >/dev/null 2>&1
     mkdir -p {{ gitlab_runner_runners_cache_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }} >/dev/null 2>&1
     mkdir -p {{ gitlab_runner_runners_vagrant_boxes_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }}
+    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }} >/dev/null 2>&1
     exit 0
   SHELL
 
