--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -42,9 +42,9 @@ Vagrant.configure("2") do |config|
     libvirt.memory = {{ gitlab_runner_runners_vagrant_memory }}
     libvirt.nested = {{ gitlab_runner_runners_vagrant_nested | bool | lower }}
     libvirt.nic_model_type = 'virtio'
-    libvirt.storage :file, bus: 'virtio', cache: 'none'
+    libvirt.storage :file, bus: 'virtio', cache: 'writethrough'
     libvirt.video_type = 'virtio'
-    libvirt.volume_cache = 'none'
+    libvirt.volume_cache = 'writethrough'
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
