--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -53,11 +53,11 @@ Vagrant.configure("2") do |config|
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
     mkdir -p {{ gitlab_runner_runners_builds_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }} || true
+    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }} || echo \${?}
     mkdir -p {{ gitlab_runner_runners_cache_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }} || true
+    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }} || echo \${?}
     mkdir -p {{ gitlab_runner_runners_vagrant_boxes_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }} || true
+    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }} || echo \${?}
   SHELL
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
