--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -16,7 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set -ex
+set -eo pipefail
 
 VM_HOSTNAME="${VM_HOSTNAME:-"runner-${CUSTOM_ENV_CI_RUNNER_ID}-project-${CUSTOM_ENV_CI_PROJECT_ID}-concurrent-${CUSTOM_ENV_CI_CONCURRENT_PROJECT_ID}"}"
 echo ${VM_HOSTNAME} > VM_HOSTNAME
@@ -48,7 +48,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
-    set -ex
+    set -eo pipefail
     apt-get update
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
@@ -58,6 +58,7 @@ Vagrant.configure("2") do |config|
     chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }} || echo \${?}
     mkdir -p {{ gitlab_runner_runners_vagrant_boxes_dir }}
     chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }} || echo \${?}
+    exit 0
   SHELL
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
@@ -67,3 +68,5 @@ Vagrant.configure("2") do |config|
 {% endfor %}
 end
 EOF
+
+exit 0
