--- a/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
@@ -16,10 +16,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set -ex
+set -eo pipefail
 
 exec 9>/var/run/vagrant.pid
 flock -x 9
 echo $$ 1>&9
 
 vagrant up --provider libvirt
+
+exit 0
