Before=shutdown.target

--- a/templates/lib/systemd/system/gitlab-runner.service.j2
+++ b/templates/lib/systemd/system/gitlab-runner.service.j2
@@ -3,7 +3,8 @@
 [Unit]
 Description=GitLab Runner
 After=multi-user.target
-Wants=multi-user.target
+Before=shutdown.target
+Wants=multi-user.target shutdown.target
 
 [Service]
 StartLimitInterval=5
