--- a/templates/etc/gitlab-runner/config.toml.j2
+++ b/templates/etc/gitlab-runner/config.toml.j2
@@ -7,8 +7,8 @@ check_interval = {{ gitlab_runner_check_interval }}
   session_timeout = 1800
 
 [[runners]]
-  builds_dir = "{{ gitlab_runner_runners_builds_dir }}"
-  cache_dir = "{{ gitlab_runner_runners_cache_dir }}"
+  builds_dir = "/home/vagrant"
+  cache_dir = "/var/cache/gitlab-runner"
   executor = "custom"
   name = "{{ gitlab_runner_runners_name }}"
   token = "{{ gitlab_runner_runners_token }}"
