--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -70,12 +70,12 @@ Vagrant.configure("2") do |config|
     apt-get update
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
-    mkdir -p {{ gitlab_runner_runners_builds_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_builds_dir }} || echo \${?}
-    mkdir -p {{ gitlab_runner_runners_cache_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_cache_dir }} || echo \${?}
-    mkdir -p {{ gitlab_runner_runners_vagrant_boxes_dir }}
-    chown vagrant:vagrant {{ gitlab_runner_runners_vagrant_boxes_dir }} || echo \${?}
+    mkdir -p /home/vagrant
+    chown vagrant:vagrant /home/vagrant || echo \${?}
+    mkdir -p /var/cache/gitlab-runner
+    chown vagrant:vagrant /var/cache/gitlab-runner || echo \${?}
+    mkdir -p /home/vagrant/.vagrant.d/boxes
+    chown vagrant:vagrant /home/vagrant/.vagrant.d/boxes || echo \${?}
     exit 0
   SHELL
 end
