--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -45,24 +45,12 @@ Vagrant.configure("2") do |config|
     libvirt.storage :file, bus: 'virtio', cache: 'writeback'
     libvirt.video_type = 'virtio'
     libvirt.volume_cache = 'writeback'
-
-{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    libvirt.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
-      disabled: {{ synced_folder.disabled | default(false) | bool | lower }},
-      type: '{{ synced_folder.type | default('9p') }}'
-{% endfor %}
   end
 
   config.vm.provider :virtualbox do |virtualbox|
     virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
     virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory }}
     virtualbox.customize ['modifyvm', :id, '--nested-hw-virt', '{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}']
-
-{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    virtualbox.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
-      disabled: {{ synced_folder.disabled | default(false) | bool | lower }},
-      type: '{{ synced_folder.type | default('virtualbox') }}'
-{% endfor %}
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
@@ -78,6 +66,12 @@ Vagrant.configure("2") do |config|
     chown vagrant:vagrant /home/vagrant/.vagrant.d/boxes || echo \${?}
     exit 0
   SHELL
+
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+  config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
+    disabled: {{ synced_folder.disabled | default(false) | bool | lower }},
+    type: '{{ synced_folder.type | default('9p') }}'
+{% endfor %}
 end
 EOF
 
