--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -45,12 +45,22 @@ Vagrant.configure("2") do |config|
     libvirt.storage :file, bus: 'virtio', cache: 'writeback'
     libvirt.video_type = 'virtio'
     libvirt.volume_cache = 'writeback'
+
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
+      type: '9p'
+{% endfor %}
   end
 
   config.vm.provider :virtualbox do |virtualbox|
     virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
     virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory }}
     virtualbox.customize ['modifyvm', :id, '--nested-hw-virt', '{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}']
+
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
+      type: 'virtualbox'
+{% endfor %}
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
@@ -67,9 +77,6 @@ Vagrant.configure("2") do |config|
     exit 0
   SHELL
 
-{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-  config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}', type: '{{ synced_folder.type }}'
-{% endfor %}
 end
 EOF
 
