--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -47,8 +47,7 @@ Vagrant.configure("2") do |config|
     libvirt.volume_cache = 'writeback'
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
-      type: '9p'
+    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}', type: '9p'
 {% endfor %}
   end
 
@@ -58,8 +57,7 @@ Vagrant.configure("2") do |config|
     virtualbox.customize ['modifyvm', :id, '--nested-hw-virt', '{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}']
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}',
-      type: 'virtualbox'
+    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}'
 {% endfor %}
   end
 
