--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -16,7 +16,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set -eo pipefail
+set -euo pipefail
 
 VM_HOSTNAME="${VM_HOSTNAME:-"runner-${CUSTOM_ENV_CI_RUNNER_ID}-project-${CUSTOM_ENV_CI_PROJECT_ID}-concurrent-${CUSTOM_ENV_CI_CONCURRENT_PROJECT_ID}"}"
 echo ${VM_HOSTNAME} > VM_HOSTNAME
@@ -62,7 +62,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision 'shell', inline: <<-SHELL
-    set -eo pipefail
+    set -euo pipefail
     apt-get update
     apt-get dist-upgrade -y
     apt-get install -y git git-lfs
