--- a/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
@@ -18,7 +18,7 @@
 
 set -euo pipefail
 
-exec 9>/var/run/vagrant.pid
+exec 9>{{ gitlab_runner_runners_vagrant_boxes_dir }}/vagrant.pid
 flock -x 9
 echo $$ 1>&9
 
