--- a/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
@@ -18,10 +18,12 @@
 
 set -euo pipefail
 
-exec 9>/var/run/vagrant.pid
+exec 9>{{ gitlab_runner_runners_vagrant_boxes_dir }}/vagrant.pid
 flock -x 9
 echo $$ 1>&9
 
-vagrant up --provider libvirt
+vagrant box add --clean {{ gitlab_runner_runners_vagrant_image }} || echo $?
+
+vagrant up
 
 exit 0
