vagrant box add should be only once across cluster, but vagrant up should be only once per machine

--- a/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
@@ -18,11 +18,9 @@
 
 set -euo pipefail
 
-exec 9>{{ gitlab_runner_runners_vagrant_boxes_dir }}/vagrant.pid
+exec 9>/var/run/vagrant.pid
 flock -x 9
 echo $$ 1>&9
-
-vagrant box add --clean {{ gitlab_runner_runners_vagrant_image }} || echo $?
 
 vagrant up
 
