ERROR: Preparation failed: error while parsing JSON output: invalid character '=' looking for beginning of value

--- a/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
@@ -22,6 +22,8 @@ exec 9>/var/run/vagrant.pid
 flock -x 9
 echo $$ 1>&9
 
+vagrant box add --clean {{ gitlab_runner_runners_vagrant_image }} || echo $?
+
 vagrant up
 
 exit 0
