--- a/templates/etc/cron.hourly/gitlab-runner.j2
+++ b/templates/etc/cron.hourly/gitlab-runner.j2
@@ -4,5 +4,9 @@
 
 set -euo pipefail
 
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mmin +60 -exec rm -f -- '{}' \;
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mmin +60 -exec rm -rf -- '{}' \;
+# Prune Vagrant invalid entries.
+vagrant global-status --prune
+
+# Prune GitLab Runner cache older than 2 hours.
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mmin +120 -exec rm -f -- '{}' \;
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mmin +120 -exec rm -rf -- '{}' \;
