--- a/templates/etc/cron.hourly/gitlab-runner.j2
+++ b/templates/etc/cron.hourly/gitlab-runner.j2
@@ -5,8 +5,8 @@
 set -euo pipefail
 
 # Prune Vagrant invalid entries.
-vagrant global-status --prune
+vagrant global-status --prune || echo $?
 
 # Prune GitLab Runner cache older than 2 hours.
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mmin +120 -exec rm -f -- '{}' \;
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mmin +120 -exec rm -rf -- '{}' \;
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mmin +120 -exec rm -f -- '{}' \; || echo $?
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mmin +120 -exec rm -rf -- '{}' \; || echo $?
