--- a/templates/lib/systemd/system/gitlab-runner.service.j2
+++ b/templates/lib/systemd/system/gitlab-runner.service.j2
@@ -9,7 +9,7 @@ Wants=multi-user.target shutdown.target
 [Service]
 StartLimitInterval=5
 StartLimitBurst=10
-Restart=always
+Restart=on-failure
 RestartSec=120
 ExecStart=/usr/bin/gitlab-runner run \
     --config /etc/gitlab-runner/config.toml
