--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -40,6 +40,7 @@ Vagrant.configure("2") do |config|
     libvirt.cpu_mode = 'host-model'
     libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
     libvirt.disk_bus = 'virtio'
+    libvirt.disk_driver :cache => 'writeback'
     libvirt.driver = 'kvm'
     libvirt.management_network_address = '{{ gitlab_runner_runners_vagrant_management_network_address }}'
     libvirt.management_network_name = '{{ gitlab_runner_runners_vagrant_management_network_name }}'
@@ -48,7 +49,6 @@ Vagrant.configure("2") do |config|
     libvirt.nic_model_type = 'virtio'
     libvirt.storage :file, bus: 'virtio', cache: 'writeback'
     libvirt.video_type = 'virtio'
-    libvirt.volume_cache = 'writeback'
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
     config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}', type: '9p'
