--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -33,42 +33,46 @@ echo ${CI_JOB_URL} > CI_JOB_URL
 # Generate Vagrantfile for provision machine per job.
 cat > Vagrantfile <<EOF
 Vagrant.configure("2") do |config|
-  config.vm.hostname = '${VM_HOSTNAME}'
-  config.vm.box = '{{ gitlab_runner_runners_vagrant_image }}'
+  config.vm.hostname = "${VM_HOSTNAME}"
+  config.vm.box = "{{ gitlab_runner_runners_vagrant_image }}"
 
+{% if vagrant_default_provider | lower == 'libvirt' %}
   config.vm.provider :libvirt do |libvirt|
-    libvirt.cpu_mode = 'host-model'
+    libvirt.cpu_mode = "host-model"
     libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
-    libvirt.disk_bus = 'virtio'
-    libvirt.disk_driver :cache => 'writeback'
-    libvirt.driver = 'kvm'
-    libvirt.management_network_address = '{{ gitlab_runner_runners_vagrant_management_network_address }}'
-    libvirt.management_network_name = '{{ gitlab_runner_runners_vagrant_management_network_name }}'
+    libvirt.disk_bus = "virtio"
+    libvirt.disk_driver :cache => "writeback"
+    libvirt.driver = "kvm"
+    libvirt.management_network_address = "{{ gitlab_runner_runners_vagrant_management_network_address }}"
+    libvirt.management_network_name = "{{ gitlab_runner_runners_vagrant_management_network_name }}"
     libvirt.memory = {{ gitlab_runner_runners_vagrant_memory }}
+    libvirt.memorybacking :access, :mode => "shared"
     libvirt.nested = {{ gitlab_runner_runners_vagrant_nested | bool | lower }}
-    libvirt.nic_model_type = 'virtio'
-    libvirt.storage :file, bus: 'virtio', cache: 'writeback'
-    libvirt.video_type = 'virtio'
-
-{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}', type: '9p'
-{% endfor %}
+    libvirt.nic_model_type = "virtio"
+    libvirt.storage :file, bus: "virtio", cache: "writeback"
+    libvirt.video_type = "virtio"
   end
 
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+  config.vm.synced_folder "{{ synced_folder.src }}", "{{ synced_folder.dest }}", type: "virtiofs"
+{% endfor %}
+{% elif vagrant_default_provider | lower == 'virtualbox' %}
   config.vm.provider :virtualbox do |virtualbox|
     virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
     virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory }}
-    virtualbox.customize ['modifyvm', :id, '--nested-hw-virt', '{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}']
+    virtualbox.customize ["modifyvm", :id, "--nested-hw-virt", "{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}"]
+  end
 
 {% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
-    config.vm.synced_folder '{{ synced_folder.src }}', '{{ synced_folder.dest }}'
+  config.vm.synced_folder "{{ synced_folder.src }}", "{{ synced_folder.dest }}"
 {% endfor %}
-  end
+{% endif %}
 end
 EOF
 
-# Ensure ownership from host before 9p mount.
-chown -Rf 1000:1000 {{ gitlab_runner_runners_cache_dir }} || echo $?
-chown -Rf 1000:1000 {{ gitlab_runner_runners_vagrant_boxes_dir }} || echo $?
+# Ensure ownership for synced folder.
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+chown -Rf 1000:1000 {{ synced_folder }} || echo $?
+{% endfor %}
 
 exit 0
