--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -33,19 +33,29 @@ echo ${CI_JOB_URL} > CI_JOB_URL
 # Generate Vagrantfile for provision machine per job.
 cat > Vagrantfile <<EOF
 Vagrant.configure("2") do |config|
-  config.vm.hostname = "${VM_HOSTNAME}"
-  config.vm.box = "{{ gitlab_runner_runners_vagrant_image }}"
+{% if vagrant_default_provider | lower == 'docker' %}
+  config.vm.provider :docker do |docker|
+    docker.name = "${VM_HOSTNAME}"
+    docker.image = "{{ gitlab_runner_runners_vagrant_image }}"
+    docker.has_ssh = true
+  end
 
-{% if vagrant_default_provider | lower == 'libvirt' %}
+{% for synced_folder in gitlab_runner_runners_vagrant_synced_folders %}
+  config.vm.synced_folder "{{ synced_folder.src }}", "{{ synced_folder.dest }}"
+{% endfor %}
+{% elif vagrant_default_provider | lower == 'libvirt' %}
+  config.vm.hostname = "${VM_HOSTNAME}"
+  config.vm.box = "{{ gitlab_runner_runners_vagrant_box }}"
+
   config.vm.provider :libvirt do |libvirt|
     libvirt.cpu_mode = "host-model"
-    libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
+    libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus | int }}
     libvirt.disk_bus = "virtio"
     libvirt.disk_driver :cache => "writeback"
     libvirt.driver = "kvm"
     libvirt.management_network_address = "{{ gitlab_runner_runners_vagrant_management_network_address }}"
     libvirt.management_network_name = "{{ gitlab_runner_runners_vagrant_management_network_name }}"
-    libvirt.memory = {{ gitlab_runner_runners_vagrant_memory }}
+    libvirt.memory = {{ gitlab_runner_runners_vagrant_memory | int }}
     libvirt.memorybacking :access, :mode => "shared"
     libvirt.nested = {{ gitlab_runner_runners_vagrant_nested | bool | lower }}
     libvirt.nic_model_type = "virtio"
@@ -57,9 +67,12 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "{{ synced_folder.src }}", "{{ synced_folder.dest }}", type: "virtiofs"
 {% endfor %}
 {% elif vagrant_default_provider | lower == 'virtualbox' %}
+  config.vm.hostname = "${VM_HOSTNAME}"
+  config.vm.box = "{{ gitlab_runner_runners_vagrant_box }}"
+
   config.vm.provider :virtualbox do |virtualbox|
-    virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus }}
-    virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory }}
+    virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus | int }}
+    virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory | int }}
     virtualbox.customize ["modifyvm", :id, "--nested-hw-virt", "{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}"]
   end
 
