--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -73,6 +73,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider :virtualbox do |virtualbox|
     virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus | int }}
     virtualbox.memory = {{ gitlab_runner_runners_vagrant_memory | int }}
+    virtualbox.customize ["modifyvm", :id, "--cpu-profile", "host"]
     virtualbox.customize ["modifyvm", :id, "--nested-hw-virt", "{{ gitlab_runner_runners_vagrant_nested | bool | ternary('on', 'off') }}"]
   end
 
