--- a/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/cleanup.sh.j2
@@ -18,6 +18,11 @@
 
 set -euxo pipefail
 
+# Non-parallel `vagrant destroy` per machine.
+exec 9>/var/run/vagrant.pid
+flock -x 9
+echo $$ 1>&9
+
 # Remove the machine.
 vagrant destroy --force
 
