--- a/templates/etc/cron.hourly/gitlab-runner.j2
+++ b/templates/etc/cron.hourly/gitlab-runner.j2
@@ -7,6 +7,9 @@ set -euxo pipefail
 # Prune Vagrant invalid entries.
 vagrant global-status --prune || echo $?
 
+# Purge outdated Vagrant box image.
+vagrant box prune --force --keep-active-boxes || echo $?
+
 # Prune GitLab Runner cache older than 1 day.
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mtime +1 -exec rm -f -- '{}' \; || echo $?
-find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mtime +1 -exec rm -rf -- '{}' \; || echo $?
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type f -mtime +1 -delete || echo $?
+find {{ gitlab_runner_runners_cache_dir }}/. ! -name . -type d -mtime +1 -delete || echo $?
