--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -37,6 +37,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider :docker do |docker|
     docker.name = "${VM_HOSTNAME}"
     docker.image = "{{ gitlab_runner_runners_vagrant_image }}"
+    docker.pull = {{ gitlab_runner_runners_vagrant_pull | bool | lower }}
     docker.has_ssh = true
   end
 
@@ -46,6 +47,7 @@ Vagrant.configure("2") do |config|
 {% elif vagrant_default_provider | lower == 'libvirt' %}
   config.vm.hostname = "${VM_HOSTNAME}"
   config.vm.box = "{{ gitlab_runner_runners_vagrant_box }}"
+  config.vm.box_check_update = {{ gitlab_runner_runners_vagrant_box_check_update | bool | lower }}
 
   config.vm.provider :libvirt do |libvirt|
     libvirt.cpu_mode = "host-passthrough"
@@ -69,6 +71,7 @@ Vagrant.configure("2") do |config|
 {% elif vagrant_default_provider | lower == 'virtualbox' %}
   config.vm.hostname = "${VM_HOSTNAME}"
   config.vm.box = "{{ gitlab_runner_runners_vagrant_box }}"
+  config.vm.box_check_update = {{ gitlab_runner_runners_vagrant_box_check_update | bool | lower }}
 
   config.vm.provider :virtualbox do |virtualbox|
     virtualbox.cpus = {{ gitlab_runner_runners_vagrant_cpus | int }}
