--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -50,7 +50,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = {{ gitlab_runner_runners_vagrant_box_check_update | bool | lower }}
 
   config.vm.provider :libvirt do |libvirt|
-    libvirt.cpu_mode = "host-passthrough"
+    libvirt.cpu_mode = "host-model"
     libvirt.cpus = {{ gitlab_runner_runners_vagrant_cpus | int }}
     libvirt.disk_bus = "virtio"
     libvirt.disk_driver :cache => "writeback"
