--- a/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/config.sh.j2
@@ -55,6 +55,8 @@ Vagrant.configure("2") do |config|
     libvirt.disk_bus = "virtio"
     libvirt.disk_driver :cache => "writeback"
     libvirt.driver = "kvm"
+    libvirt.graphics_ip = "0.0.0.0"
+    libvirt.graphics_type = "vnc"
     libvirt.management_network_address = "{{ gitlab_runner_runners_vagrant_management_network_address }}"
     libvirt.management_network_name = "{{ gitlab_runner_runners_vagrant_management_network_name }}"
     libvirt.memory = {{ gitlab_runner_runners_vagrant_memory | int }}
