vagrant up --provider {{ vagrant_default_provider }}

--- a/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
+++ b/templates/opt/gitlab-runner/executors/vagrant/prepare.sh.j2
@@ -27,6 +27,6 @@ echo $$ 1>&9
 vagrant box list
 
 # Create guest machine per job.
-vagrant up
+vagrant up --provider {{ vagrant_default_provider }}
 
 exit 0
