--- a/templates/etc/cron.daily/gitlab-runner.j2
+++ b/templates/etc/cron.daily/gitlab-runner.j2
@@ -12,8 +12,7 @@ vagrant global-status --prune || echo $?
 # Update Vagrant box images for /root/.vagrant.d.
 export VAGRANT_HOME=/root/.vagrant.d
 vagrant box add --provider {{ vagrant_default_provider }} {{ gitlab_runner_runners_vagrant_box }} || echo $?
-vagrant box list --machine-readable | grep box-name | while read _LINE; do
-    _BOX="$(echo $_LINE | cut -d, -f4)"
+vagrant box list --machine-readable | grep box-name | cut -d, -f4 | sort -u | while read _BOX; do
     vagrant box add --provider {{ vagrant_default_provider }} $_BOX || echo $?
 done
 vagrant box prune --force --keep-active-boxes || echo $?
@@ -24,8 +23,7 @@ unset VAGRANT_HOME
 # Update Vagrant box images for /home/vagrant/.vagrant.d.
 export VAGRANT_HOME=/home/vagrant/.vagrant.d
 vagrant box add --provider {{ vagrant_default_provider }} {{ gitlab_runner_runners_vagrant_box }} || echo $?
-vagrant box list --machine-readable | grep box-name | while read _LINE; do
-    _BOX="$(echo $_LINE | cut -d, -f4)"
+vagrant box list --machine-readable | grep box-name | cut -d, -f4 | sort -u | while read _BOX; do
     vagrant box add --provider {{ vagrant_default_provider }} $_BOX || echo $?
 done
 vagrant box prune --force --keep-active-boxes || echo $?
